[tool.poetry]
name = "irb_kernel"
version = "0.2.0"
description = "A Jupyter kernel for irb (REPL for Ruby programming language)"
authors = ["Kozo Nishida <kozo.nishida@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pexpect = "^4.8.0"
notebook = "^6.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
